Améliore l'affectation d'attributs en s'assurant qu'on tente pas d'affecter deux attributs de même type dans une compétence. Corrige une faute de frappe.

--- a/src/LarpManager/Views/admin/competence/fragment/form.twig
+++ b/src/LarpManager/Views/admin/competence/fragment/form.twig
@@ -17,7 +17,7 @@
 					 {{ form_row(form.description) }}
 							
 					{% if isNew == false %}		
-					<h3>Attributes</h3>
+					<h3>Attributs</h3>
 					<input type="text" id="competenceAttributesAsString" name="competenceAttributesAsString" style="visibility: hidden;" value="{{ competence.competenceAttributesAsString }}" />
 				    <div class="lm-attributes">				    						   
 				    </div>
