--- a/src/LarpManager/Views/public/gn/validation_cg.twig
+++ b/src/LarpManager/Views/public/gn/validation_cg.twig
@@ -11,7 +11,7 @@
 		{{ form_widget(form) }}
 		<div class="row">
 		  	<div class="col-md-12">
-		  		<p>Avant de poursuivre, vous devez valider les conditions génèrales de {{ gn.label }}</p>
+		  		<p>Avant de poursuivre, vous devez valider les conditions générales de {{ gn.label }}</p>
 		  				  				  		
 			  	<p>{{ gn.conditionsGenerales|markdown}}</p>		  				  		
 		  	</div>	  		  	
@@ -34,7 +34,7 @@
 					  	<div class="pull-right">
 					  		<p>
 					  			<a class="btn btn-primary btn-lg" href="{{ path('homepage') }}" role="button"><i class="fa fa-angle-double-left" aria-hidden="true"></i> Annuler</a>
-					  			<button type="submit" class="btn btn-primary btn-lg" >J'accepte les conditions génèrales<i class="fa fa-exclamation" aria-hidden="true"></i></button>
+					  			<button type="submit" class="btn btn-primary btn-lg" >J'accepte les conditions générales<i class="fa fa-exclamation" aria-hidden="true"></i></button>
 					  		</p>
 				  		</div>
 					</div>	
