--- a/src/LarpManager/Views/public/gn/validation_ci.twig
+++ b/src/LarpManager/Views/public/gn/validation_ci.twig
@@ -4,26 +4,26 @@
 
 {% block content %}
 <div class="jumbotron">
-	<h1>Validation des conditions génèrales</h1>
+	<h1>Validation des conditions d'inscription</h1>
 	<hr />
-	<form class="form" action="{{ path('user.gn.validationcg', {'gn': gn.id}) }}" method="POST" {{ form_enctype(form) }}>
+	<form class="form" action="{{ path('user.gn.validationci', {'gn': gn.id}) }}" method="POST" {{ form_enctype(form) }}>
 		{% form_theme form 'Form/bootstrap_3_horizontal_layout.html.twig' %}
 		{{ form_widget(form) }}
 		<div class="row">
 		  	<div class="col-md-12">
-		  		<p>Avant de poursuivre, vous devez valider les conditions générales de {{ gn.label }}</p>
+		  		<p>Avant de poursuivre, vous devez valider les conditions d'inscription de {{ gn.label }}</p>
 		  				  				  		
-			  	<p>{{ gn.conditionsGenerales|markdown}}</p>		  				  		
+			  	<p>{{ gn.conditionsInscription|markdown}}</p>		  				  		
 		  	</div>	  		  	
 		</div>
 	
 		
-		{% if gn.conditionsGenerales %}
+		{% if gn.conditionsInscription %}
 			<hr />
 			<div class="row">		
 				<div class="col-md-12">
 						<div class="checkbox">
-						  <label><input type="checkbox" name="acceptCg" value="ok" required="required">En cochant cette case, vous confirmez avoir pris connaissance des conditions générales et vous les acceptez</label>
+						  <label><input type="checkbox" name="acceptCi" value="ok" required="required">En cochant cette case, vous confirmez avoir pris connaissance des conditions d'inscription et vous les acceptez</label>
 						</div>
 				</div>
 			</div>
@@ -34,7 +34,7 @@
 					  	<div class="pull-right">
 					  		<p>
 					  			<a class="btn btn-primary btn-lg" href="{{ path('homepage') }}" role="button"><i class="fa fa-angle-double-left" aria-hidden="true"></i> Annuler</a>
-					  			<button type="submit" class="btn btn-primary btn-lg" >J'accepte les conditions générales<i class="fa fa-exclamation" aria-hidden="true"></i></button>
+					  			<button type="submit" class="btn btn-primary btn-lg" >J'accepte les conditions d'inscription<i class="fa fa-exclamation" aria-hidden="true"></i></button>
 					  		</p>
 				  		</div>
 					</div>	
