--- a/src/LarpManager/Views/public/personnage/detail.twig
+++ b/src/LarpManager/Views/public/personnage/detail.twig
@@ -42,16 +42,16 @@
 								<li class="list-group-item"><a href="{{ path('participant.personnage.langueAncienne', {'participant': participant.id}) }}">Choisir une langue ancienne supplémentaire</a></li>
 							{% endif %}
 							{% if trigger.tag == 'ALCHIMIE APPRENTI' %}
-								<li class="list-group-item"><a href="{{ path('participant.personnage.potion', {'niveau' : 1, 'participant' : participant.id}) }}">Choisir une nouvelle potion de niveau apprenti</a></li>
+								<li class="list-group-item"><a href="{{ path('participant.personnage.potion', {'niveau' : 1, 'participant' : participant.id}) }}">Choisir une nouvelle potion de niveau Apprenti</a></li>
 							{% endif %}
 							{% if trigger.tag == 'ALCHIMIE INITIE' %}
-								<li class="list-group-item"><a href="{{ path('participant.personnage.potion', {'niveau' : 2, 'participant' : participant.id}) }}">Choisir une nouvelle potion de niveau innitié</a></li>
+								<li class="list-group-item"><a href="{{ path('participant.personnage.potion', {'niveau' : 2, 'participant' : participant.id}) }}">Choisir une nouvelle potion de niveau Initié</a></li>
 							{% endif %}
 							{% if trigger.tag == 'ALCHIMIE EXPERT' %}
-								<li class="list-group-item"><a href="{{ path('participant.personnage.potion', {'niveau' : 3, 'participant' : participant.id}) }}">Choisir une nouvelle potion de niveau expert</a></li>
+								<li class="list-group-item"><a href="{{ path('participant.personnage.potion', {'niveau' : 3, 'participant' : participant.id}) }}">Choisir une nouvelle potion de niveau Expert</a></li>
 							{% endif %}
 							{% if trigger.tag == 'ALCHIMIE MAITRE' %}
-								<li class="list-group-item"><a href="{{ path('participant.personnage.potion', {'niveau' : 4, 'participant' : participant.id}) }}">Choisir une nouvelle potion de niveau maitre</a></li>
+								<li class="list-group-item"><a href="{{ path('participant.personnage.potion', {'niveau' : 4, 'participant' : participant.id}) }}">Choisir une nouvelle potion de niveau Maitre</a></li>
 							{% endif %}
 							{% if trigger.tag == 'DOMAINE MAGIE' %}
 								<li class="list-group-item"><a href="{{ path('participant.personnage.domaine', {'participant': participant.id}) }}">Choisir un domaine de magie</a></li>
