Les responsables des groupes secondaires voient maintenant chaque participant ayant changé de personnage comme "Pas inscrit" et non inscrit alors que leur personnage ne l'est pas. + merge

--- a/src/LarpManager/Views/public/groupeSecondaire/detail.twig
+++ b/src/LarpManager/Views/public/groupeSecondaire/detail.twig
@@ -104,7 +104,7 @@
 					{% if membre.personnage.participeTo(participant.gn) %}
 						<span class="text-success">Inscrit à {{ participant.gn.label }}</span>
 					{% else %}
-						<span class="text-info">Pas encore inscrit à {{ participant.gn.label }}</span>
+						<span class="text-info">Personnage pas inscrit à {{ participant.gn.label }}</span>
 					{% endif %}
 					
 					<br />
