--- a/src/LarpManager/Views/admin/personnage/detail.twig
+++ b/src/LarpManager/Views/admin/personnage/detail.twig
@@ -383,8 +383,8 @@
 								
 								<div class="list-group-item">
 									<h6 class="list-group-item-heading">Lié aux langages</h6>
-									{% for couleur in langueMateriel %}
-											<div class="list-group-item-text"><strong>Bracelet {{ couleur }}</strong></div>
+									{% for materiel in langueMateriel %}
+											<div class="list-group-item-text"><strong>{{ materiel }}</strong></div>
 									{% else %}
 										<div class="list-group-item-text">Aucun matériel</div>
 									{% endfor %}
