Corrige l'impression d'enveloppe d'un personnage qui récupérait les persos secondaires de toutes les participations ratachés au personnage

--- a/src/LarpManager/Views/admin/personnage/enveloppe.twig
+++ b/src/LarpManager/Views/admin/personnage/enveloppe.twig
@@ -7,14 +7,13 @@
 </div>
 
 {% if personnage.user %}
-	{% for participant in personnage.user.participants %}
 		<strong>Personnage Secondaire : </strong>
-		{% if participant.personnageSecondaire %}
+		{% if personnage.prochaineParticipation != null and personnage.prochaineParticipation.personnageSecondaire != null %}
 			{{ participant.personnageSecondaire.classe.label }}
 		{% else %}
 			PAS DE PERSONNAGE SECONDAIRE
 		{% endif %}
-	{% endfor %}
+	
 {% endif %}
 	
 <strong>Renommée :</strong> {{ personnage.renomme|default(0) }}<br />
