--- a/src/LarpManager/Views/admin/personnage/list.twig
+++ b/src/LarpManager/Views/admin/personnage/list.twig
@@ -28,7 +28,7 @@
 					<a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Télécharger la liste (CSV)" href="{{ path('personnage.admin.download') }}"><i class="fa fa-download"></i></a>
 				</div>
 				
-				<form class="form-inline" action="{{ path('personnage.admin.list') }}" method="POST" {{ form_enctype(form) }}>
+				<form class="form-inline" action="{{ path('personnage.admin.list') }}" method="GET" {{ form_enctype(form) }}>
 					{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
 
 					<div class="form-group">
@@ -49,9 +49,9 @@
 		   		
 	   			
 			</div>
-			{{ paginator|raw }}	
-	
-		
+			{{ paginator|raw }}
+
+
 	<table class="table table-striped table-bordered table-condensed table-hover">
 		<thead>
 			<tr>
