--- a/src/LarpManager/Views/admin/personnage/list.twig
+++ b/src/LarpManager/Views/admin/personnage/list.twig
@@ -3,6 +3,31 @@
 {% block title %}Personnages{% endblock title %}
 
 {% block content %}
+	{% macro getCaret(app,type) %}
+		{% if app.request.get('order_by') == type  %}
+			{% if app.request.get('order_dir') == 'ASC' %}
+				<span class="caret"></span>
+			{%else%}
+				<span class="dropup">
+					<span class="caret"></span>
+				</span>
+			{% endif %}
+		{% endif %}
+	{% endmacro %}
+
+	{% macro getDirection(app,type)  %}
+		{% if app.request.get('order_by') == type  %}
+			{% if app.request.get('order_dir') == 'ASC' %}
+				{{ 'DESC' }}
+			{%else%}
+				{{ 'ASC' }}
+			{% endif %}
+		{% else %}
+			{{ 'ASC' }}
+		{% endif %}
+	{% endmacro %}
+
+	{% import _self as macros %}
 
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage') }}">Accueil</a></li>
@@ -56,60 +81,22 @@
 		<thead>
 			<tr>
 				<th>
-					{% if app.request.get('order_dir') == 'ASC' and app.request.get('order_by') == 'id' %}
-						<a href="{{ path('personnage.admin.list', {'order_by': 'id', 'order_dir': 'DESC'})~optionalParameters }}">
-					{%  else %}
-						<a href="{{ path('personnage.admin.list', {'order_by': 'id', 'order_dir': 'ASC'})~optionalParameters }}">
-					{% endif %}
-						#	
-					{% if app.request.get('order_by') == 'id'  %}
-						{% if app.request.get('order_dir') == 'ASC' %}
-							<span class="caret"></span>
-						{%else%}
-							<span class="dropup">
- 									<span class="caret"></span>
-							</span>
-						{% endif %}
-					{% endif %}
+					<a href="{{ path('personnage.admin.list', {'order_by': 'id', 'order_dir': macros.getDirection(app,'id')|trim})~optionalParameters }}">
+						# {{ macros.getCaret(app,'id') }}
 					</a>
 				</th>
 				<th>
-					{% if app.request.get('order_dir') == 'ASC' and app.request.get('order_by') == 'nom' %}
-						<a href="{{ path('personnage.admin.list', {'order_by': 'nom', 'order_dir': 'DESC'})~optionalParameters }}">
-					{%  else %}
-						<a href="{{ path('personnage.admin.list', {'order_by': 'nom', 'order_dir': 'ASC'})~optionalParameters }}">
-					{% endif %}
-						Nom	
-					{% if app.request.get('order_by') == 'nom'  %}
-						{% if app.request.get('order_dir') == 'ASC' %}
-							<span class="caret"></span>
-						{%else%}
-							<span class="dropup">
- 									<span class="caret"></span>
-							</span>
-						{% endif %}
-					{% endif %}
+					<a href="{{ path('personnage.admin.list', {'order_by': 'nom', 'order_dir': macros.getDirection(app,'nom')|trim})~optionalParameters }}">
+						Nom {{ macros.getCaret(app,'nom') }}
 					</a>
 				</th>
 				<th>
 					Classe
 				</th>
 				<th>
-					{% if app.request.get('order_dir') == 'ASC' and app.request.get('order_by') == 'renomme' %}
-						<a href="{{ path('personnage.admin.list', {'order_by': 'renomme', 'order_dir': 'DESC'})~optionalParameters }}">
-					{%  else %}
-						<a href="{{ path('personnage.admin.list', {'order_by': 'renomme', 'order_dir': 'ASC'})~optionalParameters }}">
-					{% endif %}
-					Renomme
-					{% if app.request.get('order_by') == 'renomme'  %}
-						{% if app.request.get('order_dir') == 'ASC' %}
-							<span class="caret"></span>
-						{%else%}
-							<span class="dropup">
- 									<span class="caret"></span>
-							</span>
-						{% endif %}
-					{% endif %}
+					<a href="{{ path('personnage.admin.list', {'order_by': 'renomme', 'order_dir': macros.getDirection(app,'renomme')|trim})~optionalParameters }}">
+						Renommée {{ macros.getCaret(app,'renomme') }}
+					</a>
 				</th>
 				<th>
 					Groupe
