--- a/src/LarpManager/Views/territoire/fief.twig
+++ b/src/LarpManager/Views/territoire/fief.twig
@@ -25,23 +25,28 @@
 
 		Montre <strong>{{ paginator.currentPageFirstItem }} - {{ paginator.currentPageLastItem }}</strong>.
 
-
-		<form class="form-inline" action="{{ path('territoire.fief') }}" method="GET" {{ form_enctype(form) }}>
-			{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
-			<div class="form-group">
-				<div class="input-group">
-					{{ form_widget(form.value) }}
-				</div>
-				<div class="input-group">
-					{{ form_widget(form.type) }}
-					<div class="input-group-btn">
-						<button type="submit" class="btn btn-default" data-toggle="tooltup" data-placement="top" title="Lancer la recherche"><i class="fa fa-search"></i></button>
-						<a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Reset" href="{{ path('territoire.fief') }}"><i class="fa fa-refresh"></i></a>
+		<div class="btn-toolbar" role="toolbar" aria-label="...">
+			<div class="btn-group" role="group" aria-label="...">
+				<a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Ajouter un territoire" href="{{ path('territoire.admin.add') }}"><i class="fa fa-plus"></i></a>
+				<a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Imprimer la liste de tous les fiefs" href="{{ path('territoire.admin.print') }}"><i class="fa fa-print"></i></a>
+			</div><form class="form-inline" action="{{ path('territoire.fief') }}" method="GET" {{ form_enctype(form) }}>
+				{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
+				<div class="form-group">
+					<div class="input-group">
+						{{ form_widget(form.value) }}
+					</div>
+					<div class="input-group">
+						{{ form_widget(form.type) }}
+						<div class="input-group-btn">
+							<button type="submit" class="btn btn-default" data-toggle="tooltup" data-placement="top" title="Lancer la recherche"><i class="fa fa-search"></i></button>
+							<a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Reset" href="{{ path('territoire.fief') }}"><i class="fa fa-refresh"></i></a>
+						</div>
 					</div>
 				</div>
-			</div>
-			{{ form_rest(form) }}
-		</form>
+				{{ form_rest(form) }}
+			</form>
+		</div>
+
 
 		{{ paginator|raw }}
 	</div>
