ajout sur la liste des fiefs du lien vers des détails du fief

--- a/src/LarpManager/Views/territoire/fief.twig
+++ b/src/LarpManager/Views/territoire/fief.twig
@@ -89,8 +89,8 @@
 		<tbody>
 		{% for fief in fiefs %}
 			<tr>
-				<td>{{ fief.id }}</td>
-				<td>{{ fief.nom }}</td>
+				<td><a href="{{ path('territoire.admin.detail', {'territoire': fief.id}) }}">{{ fief.id }}</a></td>
+				<td><a href="{{ path('territoire.admin.detail', {'territoire': fief.id}) }}">{{ fief.nom }}</a></td>
 				<td>
 					{% if fief.territoire.territoire %}
 						<a href="{{ path('territoire.fief', {'order_by': 'id', 'order_dir': 'DESC','fief[province]': fief.territoire.id})~optionalParameters }}">
