--- a/src/LarpManager/Views/admin/background/personnagePrint.twig
+++ b/src/LarpManager/Views/admin/background/personnagePrint.twig
@@ -17,12 +17,14 @@ body {
 		
 			{% set backgrounds = participant.personnage.personnageBackgrounds %}
 			{% for background in backgrounds if date(background.creationDate) < date('-8 month')%}
+				{% if groupeGn.gn.id == background.gn.id %}
 				<h2>#{{ groupeGn.groupe.numero }} {{ groupeGn.groupe.nom }} ({{ background.gn.label }})</h2>
 				<h3>#{{ background.personnage.id }} {{ background.personnage.nom }}{% if background.personnage.surnom %} alias {{ background.personnage.surnom }}{% endif %}
 						
 				{{ background.text|markdown }}
 		
 				<hr class="print-page-break" />
+				{% endif %}
 			{% endfor %}
 		
 		{% endfor %}
