--- a/src/LarpManager/Views/admin/groupe/printMateriel.twig
+++ b/src/LarpManager/Views/admin/groupe/printMateriel.twig
@@ -29,7 +29,7 @@ body {
 		
 	
 	<strong>Renommée :</strong> {{ participant.personnage.renomme|default(0) }}<br />
-	<strong>Héroisme :</strong> {{ participant.personnage.heroisme|default(0) }}<br />
+	<strong>Héroïsme :</strong> {{ participant.personnage.heroisme|default(0) }}<br />
 	<strong>Richesse :</strong> {{ participant.personnage.richesse|default(0) }} PA<br />
 	<strong>Lié aux compétences: </strong>
 	<ul>	
