--- a/src/LarpManager/Views/admin/personnage/detail.twig
+++ b/src/LarpManager/Views/admin/personnage/detail.twig
@@ -116,12 +116,12 @@
 								      			<span class="caret"></span>
 								    		</a>
 											<ul class="dropdown-menu">
-												<li><a href="{{ path('personnage.admin.update.renomme', {'personnage': personnage.id}) }}">Modifier la renommée</a></li>
-												<li><a href="{{ path('personnage.admin.update.heroisme', {'personnage': personnage.id}) }}">Modifier l'héroisme</a></li>
+												<li><a href="{{ path('personnage.admin.update.renomme', {'personnage': personnage.id}) }}">Modifier la Renommée</a></li>
+												<li><a href="{{ path('personnage.admin.update.heroisme', {'personnage': personnage.id}) }}">Modifier l'Héroïsme</a></li>
 												<li><a href="{{ path('personnage.admin.update.domaine', {'personnage': personnage.id}) }}">Modifier la liste des domaines de magie</a></li>
 												<li><a href="{{ path('personnage.admin.religion.add', {'personnage': personnage.id}) }}">Ajouter une religion</a></li>
 												<li><a href="{{ path('personnage.admin.origine.update', {'personnage': personnage.id}) }}">Modifier l'origine</a></li>
-												<li><a href="{{ path('personnage.admin.update.langue', {'personnage': personnage.id}) }}">Modifier les languages</a></li>
+												<li><a href="{{ path('personnage.admin.update.langue', {'personnage': personnage.id}) }}">Modifier les langages</a></li>
 												<li><a href="{{ path('personnage.admin.update.sort', {'personnage': personnage.id}) }}">Modifier la liste des sorts</a></li>
 												<li><a href="{{ path('personnage.admin.update.potion', {'personnage': personnage.id}) }}">Modifier la liste des potions</a></li>
 												<li><a href="{{ path('personnage.admin.update.priere', {'personnage': personnage.id}) }}">Modifier la liste des prieres</a></li>
@@ -147,7 +147,7 @@
 									{% endfor %}
 								</div>
 							</div>
-							<p>Héroisme : <strong class="text-success">{{ personnage.heroisme|default(0) }}</strong>
+							<p>Héroïsme : <strong class="text-success">{{ personnage.heroisme|default(0) }}</strong>
 								<a role="button" data-toggle="collapse" href="#heroismeHistory" aria-expanded="false" aria-controls="collapseExample">
 									<i class="fa fa-history" aria-hidden="true"></i>
 								</a>
@@ -359,11 +359,11 @@
 							<div class="list-group">
 							
 								<div class="list-group-item">
-									<h6 class="list-group-item-heading">Point de renommée : {{ personnage.renomme|default(0) }}</h6>
+									<h6 class="list-group-item-heading">Renommée : {{ personnage.renomme|default(0) }}</h6>
 								</div>
 								
 								<div class="list-group-item">
-									<h6 class="list-group-item-heading">Point d'héroisme : {{ personnage.heroisme|default(0) }}</h6>
+									<h6 class="list-group-item-heading">Héroïsme : {{ personnage.heroisme|default(0) }}</h6>
 								</div>
 								
 								<div class="list-group-item">
