--- a/src/LarpManager/Views/admin/personnage/print.twig
+++ b/src/LarpManager/Views/admin/personnage/print.twig
@@ -33,7 +33,7 @@ table tr td {
 						{% for participantHasRestauration in participant.participantHasRestaurations %}
 							{{ participantHasRestauration.restauration.label }}<br />
 						{% endfor %}
-						<strong>Personnage Secondaire : </strong>
+						<strong>Personnage secondaire : </strong>
 						{% if participant.personnageSecondaire %}
 							{{ participant.personnageSecondaire.classe.label }}
 						{% else %}
@@ -60,7 +60,7 @@ table tr td {
 		<thead>
 			<tr>
 				<th>Renommée</th>
-				<th>Héroisme</th>
+				<th>Héroïsme</th>
 				<th>Pugilat</th>
 			</tr>
 		</thead>
@@ -108,9 +108,9 @@ table tr td {
 	<table>
 		<thead>
 			<tr>
-				<th>Dommaines de magie</th>
+				<th>Domaines de magie</th>
 				<th>Inventaire</th>
-				<th>Groupe secondaires</th>
+				<th>Groupes secondaires</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -159,7 +159,7 @@ table tr td {
 	<table>
 		<thead>
 			<tr>
-				<th>Sort</th>
+				<th>Sorts</th>
 				<th>Potions</th>
 				<th>Prières</th>
 			</tr>
