--- a/src/LarpManager/Views/personnage/detail.twig
+++ b/src/LarpManager/Views/personnage/detail.twig
@@ -221,14 +221,14 @@
 				</div>
 				
 				<div class="list-group-item">
-					<h6 class="list-group-item-heading">Languages connus</h6>
+					<h6 class="list-group-item-heading">Langages connus</h6>
 					<p class="list-group-item-text">
 						<ul>
 						{% for personnageLangue in personnage.personnageLangues %}
 							<li><strong>{{ personnageLangue.langue}}</strong> ({{ personnageLangue.source }})  - <a href="{{ path('personnage.admin.langue.delete', {'personnage': personnage.id, 'personnageLangue' : personnageLangue.id }) }}">Supprimer</a></li>
 						{% endfor %}
 						</ul>
-						<a href="{{ path('personnage.admin.update.langue', {'personnage': personnage.id}) }}">Modifier les languages</a>
+						<a href="{{ path('personnage.admin.update.langue', {'personnage': personnage.id}) }}">Modifier les langages</a>
 					</p>
 				</div>
 				
