--- a/src/LarpManager/Views/public/personnage/fragment/language.twig
+++ b/src/LarpManager/Views/public/personnage/fragment/language.twig
@@ -1,6 +1,6 @@
 {# languages connu #}
 <div class="header">
-	<h5>Languages connus</h5>
+	<h5>Langages connus</h5>
 </div>
 
 <ul class="list-group">
