--- a/src/LarpManager/Views/public/personnage/fragment/info.twig
+++ b/src/LarpManager/Views/public/personnage/fragment/info.twig
@@ -61,7 +61,7 @@
 				</div>
 			</li>
 			<li class="list-group-item">
-				<strong>Héroisme :</strong> {{ personnage.heroisme|default(0) }}
+				<strong>Héroïsme :</strong> {{ personnage.heroisme|default(0) }}
 				<a role="button" data-toggle="collapse" href="#heroismeHistory" aria-expanded="false" aria-controls="collapseExample">
 					<i class="fa fa-history" aria-hidden="true"></i>
 				</a>
